--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
     "autogen": "node --loader ts-node/esm autogen.ts"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.7",
     "@svgr/webpack": "^8.1.0",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "antd": "^5.18.1",
+    "framer-motion": "^11.2.10",
     "geist": "^1.3.0",
     "next": "^14.2.1",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
+    "react-fast-marquee": "^1.6.4",
+    "react-intersection-observer": "^9.10.3",
     "ts-node": "^10.9.2",
     "zod": "^3.23.3"
   },
